[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Hero.gd" type="Script" id=1]
[ext_resource path="res://Art/Characters/Hero.png" type="Texture" id=2]
[ext_resource path="res://Art/Characters/helmet-Sheet.png" type="Texture" id=3]
[ext_resource path="res://Art/Sword.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 2.0

[sub_resource type="CircleShape2D" id=2]
radius = 32.0

[sub_resource type="Animation" id=3]
resource_name = "Attack"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Armor:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7 ]
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Hand/Sword:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 90, -0.25, 0, 0.25, 0, 45, -0.25, 0, 0.25, 0, 135, -0.25, 0, 0.25, 0, 90, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.5, 0.9 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hand/Sword/Sword:collision_mask")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 0, 1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Armor:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Spin"
loop = true
step = 0.01
tracks/0/type = "bezier"
tracks/0/path = NodePath("Hand/Sword:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 90, -0.25, 0, 0.25, 0, 45, -0.25, 0, 0.25, 0, 495, -0.25, 0, 0.25, 0, 450, -0.25, 0, 0.25, 0, 90, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.7, 0.99, 1 )
}

[sub_resource type="Animation" id=5]
resource_name = "Walk"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Armor:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 0.5, 3.5 )

[node name="Hero" type="KinematicBody2D" groups=[
"Character",
"Hero",
]]
collision_mask = 81
script = ExtResource( 1 )
nock_back = 10
attack_damage = 1.0

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="WanderTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 3 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Attack = SubResource( 3 )
anims/Idle = SubResource( 4 )
anims/Spin = SubResource( 7 )
anims/Walk = SubResource( 5 )

[node name="Hand" type="Node2D" parent="."]
position = Vector2( 0, 1 )

[node name="Sword" type="Sprite" parent="Hand"]
position = Vector2( -1, 0.5 )
rotation = 1.5708
texture = ExtResource( 4 )
offset = Vector2( 0, -5.5 )

[node name="Sword" type="Area2D" parent="Hand/Sword"]
position = Vector2( -0.5, -4 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hand/Sword/Sword"]
shape = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.5, 0 )
texture = ExtResource( 2 )
hframes = 12
frame = 5
__meta__ = {
"_edit_lock_": true
}

[node name="Armor" type="Sprite" parent="."]
position = Vector2( 0.5, 0 )
texture = ExtResource( 3 )
hframes = 12
frame = 5

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="WanderTimer" to="." method="_on_WanderTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Hand/Sword/Sword" to="." method="_on_Sword_body_entered"]
